working on ie issues

--- a/css/style.less
+++ b/css/style.less
@@ -123,7 +123,7 @@ a img, img {
     border-color: @errorColor;
   }
   100%{
-    border-color: @lightColor;
+    border-color: @bgColor;
   }
 }
 input, textarea, button, select {
